# deft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  compile  config.txt  make  readme.md
.github/workflows/: main.yml
example/: convolution.ipynb  denoise.ipynb  derivatives.ipynb  interpolate.ipynb  interpolation_squaring.ipynb  local_projection.py  spline.data  spline_test.py  sum-over-lattice.ipynb
inc/: deft.hpp
include/: array.hpp  box.hpp  deft.hpp  fourier.hpp  lattice_sum.hpp
python/: deft.py  derivatives.ipynb  example.ipynb  sum-over-lattice.ipynb
source/: box.cpp  deft.cpp  fourier.cpp  lattice_sum.cpp  pydeft.cpp
test/: spline_test.py  test_array.py  test_box.py  test_fourier.py  test_lattice_sum.py  tools_for_tests.py
